# yh-extension-manager-v2

./: AGENTS.md  Cargo.toml  README.md
src/: config.rs  handlers.rs  host_api.rs  installer.rs  lib.rs  manager.rs  manifest.rs  market.rs  openapi.rs  permissions.rs  public.rs  registry.rs  router.rs
src/entities/: mod.rs  plugin_audit_log.rs  plugin_migration_state.rs  plugin_nav_item.rs  plugin_permission_grant.rs  plugin_registry.rs  plugin_shared_record.rs  plugin_task.rs  plugin_version.rs
src/runtime/: docker.rs  mod.rs  process.rs  wasm.rs
