[package]
name = "yh-extension-manager-v2"
version = "0.1.12"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart", "ws"] }
base64 = "0.22.1"
bytes = "1.11.0"
chrono = { version = "0.4.43", features = ["serde"] }
dashmap = "6.1.0"
futures-util = "0.3.31"
hex = "0.4.3"
jsonwebtoken = "10.1.0"
rand = "0.8.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots-no-provider"] }
sea-orm = { version = "1.1.19", default-features = false, features = ["runtime-tokio", "sqlx-postgres", "sqlx-sqlite", "macros", "with-chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "sync", "rt-multi-thread", "macros", "process", "time"] }
tokio-tungstenite = { version = "0.27.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
url = "2.5.4"
uuid = { version = "1.19.0", features = ["v7", "serde"] }
zip = "2.4.2"
mime_guess = "2.0.5"

yh-api-middlewares = { path = "../yh-api-middlewares" }
yh-config-infra = { path = "../yh-config-infra" }
yh-console-log = { path = "../yh-console-log" }
yh-external-process-manager = { path = "../yh-external-process-manager" }
yh-fast-kv-storage-hub = { path = "../yh-fast-kv-storage-hub" }
yh-filemanager-vfs-storage-hub = { path = "../yh-filemanager-vfs-storage-hub" }
yh-internal-notify = { path = "../yh-internal-notify" }
yh-response = { path = "../yh-response" }
yh-system = { path = "../yh-system" }
yh-user-center = { path = "../yh-user-center" }
toml = { workspace = true }
